--- a/.demeteorized/package.json
+++ b/.demeteorized/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "opentalk",
-  "description": "opentalk - automatically converted by Demeteorizer. https://github.com/onmodulus/demeteorizer",
+  "name": "opentalk.me",
+  "description": "opentalk.me - automatically converted by Demeteorizer. https://github.com/onmodulus/demeteorizer",
   "version": "0.0.1-1",
   "main": "main.js",
   "engines": {
