--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "sockjs": "0.3.4",
     "websocket": "1.0.7",
     "mongodb": "1.3.7"
+  },
+  "subdomain": "opentalk",
+  "scripts": {
+    "start": "server/server.js"
   }
 }
